# pwnui

./: .bazelrc  .gitignore  BUILD.bazel  README.md  WORKSPACE  compile_flags.txt  io-manager.cc  io-manager.h  io-manager_test.cc  llvm_headers.BUILD  llvm_libs.BUILD  process.cc  process.h  server_main.cc  service.cc  service.h  service.proto  session-state.cc  session-state.h
frontend/: BUILD.bazel  envoy.yaml  update_frontend_grpc_genfiles.sh
frontend/pwnui/: README.md  angular.json  package.json
frontend/pwnui/src/: index.html  tsconfig.app.json
frontend/pwnui/src/app/: app.component.html  app.component.scss  app.component.ts  app.module.ts  ioelement-text.ts  ioelement-to-text.pipe.ts
frontend/pwnui/src/app/ioconsumer-element/: ioconsumer-element.component.html  ioconsumer-element.component.scss  ioconsumer-element.component.ts
frontend/pwnui/src/app/iodriver-terminal/: iodriver-terminal.component.ts
frontend/pwnui/src/app/ioelement/: ioelement.component.html  ioelement.component.scss  ioelement.component.ts
frontend/pwnui/src/app/iorenderer/: iorenderer.component.html  iorenderer.component.scss  iorenderer.component.ts
frontend/pwnui/src/rpc/: ServiceServiceClientPb.ts  service_pb.d.ts  service_pb.js
io_driver/: BUILD.bazel  driver.py  io.md  io_ops.py  io_ops_test.py
