package(default_visibility = ["//visibility:public"])

load("@com_github_grpc_grpc//bazel:cc_grpc_library.bzl", "cc_grpc_library")

cc_grpc_library(
    name = "service_proto_grpc",
    srcs = ["service.proto"],
    proto_only = False,
    well_known_protos = True,
    deps = [],
)

proto_library(
    name = "service_proto",
    srcs = ["service.proto"],
)

cc_library(
    name = "process",
    srcs = ["process.cc"],
    hdrs = ["process.h"],
    deps = [
        "@boost//:asio",
        "@boost//:process",
        "@com_github_google_glog//:glog",
    ],
)

cc_library(
    name = "io-manager",
    srcs = ["io-manager.cc"],
    hdrs = ["io-manager.h"],
    deps = [
        ":process",
        "@com_google_absl//absl/synchronization",
    ],
)

cc_library(
    name = "session-state",
    srcs = ["session-state.cc"],
    hdrs = ["session-state.h"],
    deps = [
        ":io-manager",
        ":process",
    ],
)

cc_library(
    name = "service",
    srcs = ["service.cc"],
    hdrs = ["service.h"],
    deps = [
        ":service_proto_grpc",
        ":session-state",
        "@com_github_google_glog//:glog",
        "@com_google_absl//absl/container:flat_hash_map",
        "@com_google_absl//absl/strings",
        "@llvm_headers//:llvm",
        "@llvm_libs//:llvm",
    ],
)

cc_binary(
    name = "server_main",
    srcs = ["server_main.cc"],
    deps = [
        ":service",
        "@com_github_google_glog//:glog",
        "@com_github_grpc_grpc//:grpc++",
        "@com_google_absl//absl/debugging:failure_signal_handler",
        "@com_google_absl//absl/debugging:symbolize",
        "@com_google_absl//absl/strings",
    ],
)
