load("@build_stack_rules_proto//python:python_grpc_library.bzl", "python_grpc_library")

package(default_visibility = ["//visibility:public"])

python_grpc_library(
    name = "service_proto_py",
    has_services = True,
    deps = ["//:service_proto"],
)

py_binary(
    name = "driver",
    srcs = ["driver.py"],
    deps = [":service_proto_py"],
)

py_library(
    name = "io_ops",
    srcs = ["io_ops.py"],
    deps = [":service_proto_py"],
)

py_test(
    name = "io_ops_test",
    srcs = ["io_ops_test.py"],
    deps = [":io_ops"],
)